# stuff

./: README.md
config/: .tmux.conf  README.md  tmux.conf  vimrc
configs/: .screenrc  .tmux.conf
playground/: abs.cc  adl.cc  binary_search.cc  bubble_sort.cc  concepts.h  fib_iter.cc  game_skeleton.cc  insert_sort.cc  klocki.cc  mask.cc  merge_sort.cc  message_queue.cc  message_queue_blocking.h  message_queue_blocking_test.cc  messaging.cc  move.cc  move_into_shared_ptr.cc  odd.cc  overload_value_category.cc  private.cc  quicksort.cc  random_sequence.h  recursive_copy_dir.cc  release_sequence.cc  sample_input3.txt  sub_overflow.cc  tlocal.cc  unwind.cc  vptr_jamming.cc
playground/algorithm/: 2sum.cc  2sum1.cc  binary_search.cc  closest_pair.cc  count_inversions.cc  insert_sort.cc  merge_sort.cc  nondeterministic_selection.cc  op_counter.h  quicksort.cc  quicksort3.cc  scc.cc  scc_2.cc  select_sort.cc  strassen.cc  utils.h
playground/benchmark/file_read/: test_fstream_iterator.cpp
playground/data_structures/: bst.cc  bst.h  bst_iterator.h  bst_utils.h  iterator_adapter.h  rbt.cc  rbt.h  tree_iterator.h  tree_utils.h
playground/debugger/: debugger.cc  debuggiee.cc
playground/opengl/: CMakeLists.txt  exception.h  inspect.h  opengl.h  program.cc  program.h  shader.cc  shader.h  test.cc
playground/patterns/: abstract_factory.cc  adapter.cc  bridge.cc  builder.cc  composite.cc  lazy.cc  thread_local.cc
playground/thread_rand_sleep/: CMakeLists.txt  Dockerfile  run.sh
playground/thread_rand_sleep/src/: CMakeLists.txt  randomizer.cc  test.cc  testload.cc
playground/variant/: CMakeLists.txt  Variant.h  main.cpp
programming_with_components/: README.md  minmax_element.cc
the_art_of_computer_programming/euklids_algorithm/: gcd.cc
utils/: README.md
utils/mov2mp4/: mov2mp4
utils/num2num/: num2num
